unpackaged/main/default/objects/blng__RevenueTransaction__c/fields/blng__InvoiceLine__c.field-meta.xml
<CustomField>
    <fullName>blng__InvoiceLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Référence à la ligne de facture associée à ce calendrier de revenu.</inlineHelpText>
    <label>Invoice Line</label>
    <referenceTo>blng__InvoiceLine__c</referenceTo>
    <relationshipLabel>RevenueTransactions</relationshipLabel>
    <relationshipName>InvoiceLineRevenueTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>