unpackaged/main/default/objects/blng__RevenueTransaction__c/fields/blng__OrderProduct__c.field-meta.xml
<CustomField>
    <fullName>blng__OrderProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Référence au produit de commande associé à ce calendrier de revenu.</inlineHelpText>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>RevenueTransactions</relationshipLabel>
    <relationshipName>OrderProductRevenueTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>