unpackaged/main/default/objects/blng__RevenueTransaction__c/fields/blng__OriginalFinancePeriod__c.field-meta.xml
<CustomField>
    <fullName>blng__OriginalFinancePeriod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Référence à la période de financement d&#39;origine définie dans le calendrier de revenu.</inlineHelpText>
    <label>Original Finance Period</label>
    <referenceTo>blng__FinancePeriod__c</referenceTo>
    <relationshipLabel>RevenueTransactions (Original Finance Period)</relationshipLabel>
    <relationshipName>RevenueTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>