unpackaged/main/default/objects/blng__RevenueTransaction__c/fields/blng__RevenueDistributionMethod__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueDistributionMethod__c</fullName>
    <inlineHelpText>Référence à la méthode de distribution sélectionnée dans le calendrier de revenu. Décrit la distribution du revenu
        sur une période définie, en une fois, ou sur une période saisie manuellement.</inlineHelpText>
    <label>Revenue Distribution Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>