unpackaged/main/default/objects/blng__RevenueTransaction__c/fields/blng__RevenueFinancePeriod__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueFinancePeriod__c</fullName>
    <inlineHelpText>Référence à la période de financement sélectionnée dans le calendrier de revenu.</inlineHelpText>
    <label>Revenue Finance Period</label>
    <referenceTo>blng__FinancePeriod__c</referenceTo>
    <relationshipLabel>RevenueTransactions</relationshipLabel>
    <relationshipName>FinancePeriodRevenueTransactions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>