unpackaged/main/default/objects/blng__RevenueTransaction__c/fields/blng__RevenueRecognitionGLRule__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueRecognitionGLRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>La règle du grand livre de comptabilisation du revenu sélectionnée dans le calendrier de revenu.</inlineHelpText>
    <label>Revenue Recognition GL Rule</label>
    <referenceTo>blng__GLRule__c</referenceTo>
    <relationshipLabel>RevenueTransactions</relationshipLabel>
    <relationshipName>GLRuleRevenueTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>