unpackaged/main/default/objects/blng__RevenueTransaction__c/fields/blng__RevenueRecognitionGLTreatment__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueRecognitionGLTreatment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Traitement du grand livre de comptabilisation du revenu</inlineHelpText>
    <label>Revenue Recognition GL Treatment</label>
    <referenceTo>blng__GLTreatment__c</referenceTo>
    <relationshipLabel>RevenueTransactions</relationshipLabel>
    <relationshipName>GLTreatmentRevenueTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>