unpackaged/main/default/objects/blng__RevenueTransaction__c/fields/blng__RevenueSchedule__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueSchedule__c</fullName>
    <inlineHelpText>Calendrier de revenu utilisé pour cette transaction</inlineHelpText>
    <label>Revenue Schedule</label>
    <referenceTo>blng__RevenueSchedule__c</referenceTo>
    <relationshipLabel>Revenue Transactions</relationshipLabel>
    <relationshipName>RevenueScheduleRevenueTransactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>